# openmesh_structures

./: CMakeLists.txt  LICENSE  README.md  openmesh_doubleprecisiontraits.h  openmesh_structuresConfig.cmake.in
